# rusty_bot

./: .gitignore  ASSETS_LICENSES.md  Cargo.toml  Dioxus.toml  LICENSES.md  README.md  input.css  package-lock.json
assets/: tailwind.css
context/: context.md  perrogato.md
db/embeddings.db/: data.mdb  lock.mdb
src/: main.rs
src/components/: conversation.rs  hero.rs  input.rs  message.rs  mod.rs
src/model/: chat.rs  document.rs  mod.rs
src/server/: database_impl.rs  embedding.rs  llm.rs  mod.rs
src/server_functions/: mod.rs  server_functions.rs
style/: output.css
