[package]
name = "rusty_bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Alejandro López Martínez lattecast@gmail.com"]

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack"] }
kalosm = { git = "https://github.com/floneum/floneum", features = ["language", "surrealdb"], optional = true }
tokio = "1.45.1"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
futures = "0.3.31"
comrak = "0.39.0"
surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"], optional = true }
serde = { version = "1.0", features = ["derive"] }


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:kalosm", "dep:surrealdb"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=-avx,-avx2"]


